# claude-agents

./: CHANGELOG.md  LICENSE  README.md  SPEC.md  agent-top  agent_top.py  ccnotify.py  claude-agents  install.sh  pyproject.toml  test-agents.sh  test-teams.sh
.claude/: CLAUDE.md
agent_top/: __init__.py  _ccnotify.py
docs/plans/: 2026-02-20-agent-teams-design.md  2026-02-20-alive-console-design.md  2026-02-20-alive-console-impl.md  2026-02-21-agent-biographies-design.md  2026-02-22-tool-deepdive-errors-design.md  2026-02-22-tool-deepdive-errors-impl.md  2026-02-23-parallel-agent-tree-impl.md
thronglets/: index.html  package-lock.json  package.json  vite.config.js
thronglets/.claude/: PRINCIPLES.md
thronglets/src/: main.js  main.ts  style.css
thronglets/src-tauri/: Cargo.toml  tauri.conf.json
thronglets/src-tauri/src/: main.rs
